Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17115

Lock deadlock between qmt_delete_qid and qmt_dqacq0

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      kernel: Call Trace:
      kernel: [<0>] jbd2_log_wait_commit+0xc5/0x150 [jbd2]
      kernel: [<0>] jbd2_journal_stop+0x353/0x3e0 [jbd2]
      kernel: [<0>] __ldiskfs_journal_stop+0x3c/0xb0 [ldiskfs]
      kernel: [<0>] osd_trans_stop+0x1c8/0x670 [osd_ldiskfs]
      kernel: [<0>] qmt_delete_qid+0x13d/0xa57 [lquota]
      kernel: [<0>] qmt_quotactl+0x2b4/0x5f0 [lquota]
      kernel: [<0>] mdt_quotactl+0x676/0x7c0 [mdt]
      kernel: [<0>] tgt_request_handle+0x856/0x1740 [ptlrpc]
      kernel: [<0>] ptlrpc_server_handle_request+0x253/0xbe0 [ptlrpc]
      kernel: [<0>] ptlrpc_main+0xc09/0x1c30 [ptlrpc]
      kernel: [<0>] kthread+0xd1/0xe0
      kernel: [<0>] ret_from_fork_nospec_begin+0x7/0x21
      
      kernel: [<0>] wait_transaction_locked+0x85/0xd0 [jbd2]
      kernel: [<0>] add_transaction_credits+0x278/0x310 [jbd2]
      kernel: [<0>] start_this_handle+0x1a1/0x430 [jbd2]
      kernel: [<0>] jbd2__journal_start+0x103/0x200 [jbd2]
      kernel: [<0>] __ldiskfs_journal_start_sb+0x6d/0xe0 [ldiskfs]
      kernel: [<0>] osd_trans_start+0x1e7/0x570 [osd_ldiskfs]
      kernel: [<0>] qmt_trans_start_with_slv+0x25e/0x540 [lquota]
      kernel: [<0>] qmt_dqacq0+0x169/0x1030 [lquota]
      kernel: [<0>] qmt_dqacq+0x5b9/0x8c0 [lquota]
      kernel: [<0>] mdt_quota_dqacq+0x62/0x160 [mdt]
      kernel: [<0>] tgt_request_handle+0x856/0x1740 [ptlrpc]
      kernel: [<0>] ptlrpc_server_handle_request+0x253/0xbe0 [ptlrpc]
      kernel: [<0>] ptlrpc_main+0xc09/0x1c30 [ptlrpc]
      kernel: [<0>] kthread+0xd1/0xe0
      

            hongchao.zhang Hongchao Zhang
            hongchao.zhang Hongchao Zhang
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: